--- a/apps/block_scout_web/priv/gettext/default.pot
+++ b/apps/block_scout_web/priv/gettext/default.pot
@@ -439,7 +439,7 @@ msgstr ""
 
 #: lib/block_scout_web/templates/chain/_metatags.html.eex:4
 #, elixir-autogen, elixir-format
-msgid "BlockScout provides analytics data, API, and Smart Contract tools for the %{subnetwork}"
+msgid "BDC Explorer provides analytics data, API, and Smart Contract tools for the %{subnetwork}"
 msgstr ""
 
 #: lib/block_scout_web/templates/chain/show.html.eex:153
